src/components/two-up-display.sass
@import vars

.two-up-display
  display: grid;
  grid-template-columns: 50% 50%;
  width: 100%
  height: 100%
  justify-content: center

.two-up-panel
  display: flex
  flex-direction: column
  background-color: $component-bgcolor
  border: $component-border-width solid white
  border-radius: $two-up-border-radius
  margin: $double-two-up-margin
  overflow: hidden

  .button-holder
    flex-grow: 0
    flex-shrink: 0
    display: flex
    align-items: center
    justify-content: center
    width: 30px
    height: 30px
    font-size: 11px
    font-family: $font-stack
    color: $color-simdata-amber-dark2
    transition-duration: $fade-time
    &:hover:not(.disabled)
      cursor: pointer
    &.disabled
      opacity: .5
      pointer-events: none

  .header
    flex: 0 0 $two-up-header-height
    display: flex
    align-items: center
    font-family: $font-stack
    color: $two-up-header-color
    text-align: center
    background-color: $two-up-header-bgcolor
    margin-bottom: 2px
    &.populations
      background-color: $color-simdata-amber
    &.organism
      background-color: $color-simdata-carrot
    &.breeding
      background-color: $color-simdata-brick

    .title
      flex-grow: 1

    .button-holder
      &:hover:not(.disabled)
        background-color: $two-up-button-background
      .button
        height: $two-up-button-icon-height
        width: $two-up-button-icon-width - 30
        fill: $color-simdata-amber-light1
      &.active
        .button
          fill: $two-up-button-icon-color-active

    &.organism
      .button-holder
        &:hover:not(.disabled)
          background-color: $color-simdata-carrot-dark1
        .button
          fill: $color-simdata-carrot-light1
        &.active
          .button
            fill: $two-up-button-icon-color-active

    &.breeding
      .button-holder
        &:hover:not(.disabled)
          background-color: $color-simdata-brick-dark1
        .button
          fill: $color-simdata-brick-light1
        &.active
          .button
            fill: $two-up-button-icon-color-active

  .content
    flex-grow: 1
    overflow: hidden
    position: relative

    &.populations
      background-color: $color-simdata-amber-light2

    &.organism
      background-color: $color-simdata-carrot-light2

    &.breeding
      background-color: $color-simdata-brick-light2

  .resizetofit
    display: flex

  .scrollable
    overflow: auto

  .footer
    display: flex
    align-items: center
    justify-content: center
    height: $two-up-footer-height
    width: 100%
    margin-top: 2px
    background-color: $two-up-header-bgcolor
    border-bottom-left-radius: $component-border-radius
    border-bottom-right-radius: $component-border-radius
    transition-property: height
    transition-duration: $fade-time
    color: $color-white
    font-size: 11px

    &.populations
      background-color: $color-simdata-amber
      &.data
        height: 45px
    &.organism
      background-color: $color-simdata-carrot
    &.breeding
      background-color: $color-simdata-brick

    .button-holder
      width: 92px
      margin: 0 5px 0 7px
      border-radius: 13px
      background-color: $color-simdata-amber-light2
      &:hover:not(.disabled):not(.active)
        background-color: $color-simdata-amber-light1
      &:active:not(.disabled), &.active
        background-color: $color-simdata-amber-dark1
        color: $color-white
        &:hover
          background-color: $color-simdata-amber-dark1-5

  .float-buttons
    .button-holder
      position: absolute
      width: 114px
      height: 29px
      border-radius: 5px
      background-color: $color-simdata-amber-light2
      transform: translate3d(0px, 0px, 0px)  // needed to keep visibility after scaling
      &.upper-right
        top: 111px
        right: 17px
      &:hover:not(.disabled)
        background-color: $color-simdata-amber-light1
      &:active:not(.disabled)
        background-color: $color-simdata-amber-dark1
        color: $color-white

  .check-container
    display: block
    position: relative
    padding-left: 25px
    cursor: pointer
    -webkit-user-select: none
    -moz-user-select: none
    -ms-user-select: none
    user-select: none
    margin-left: 5px
    margin-right: 5px
    margin-top: $internal-component-margin
    margin-bottom: $internal-component-margin

    &.disabled
      opacity: .5
      pointer-events: none

  /* Hide the browser's default checkbox */
  .check-container input
    position: absolute
    opacity: 0
    cursor: pointer
    height: 0
    width: 0

  /* Create a custom checkbox */
  .checkmark
    position: absolute
    top: 0
    left: 0
    height: 20px
    width: 20px
    border-radius: $component-border-radius
    background-color: $color-simdata-amber-light2

  /* On mouse-over, add a background color */
  .check-container:hover input ~ .checkmark
    background-color: $color-simdata-amber-light1

  /* On mouse-down, add a background color */
  .check-container:active input ~ .checkmark
    background-color: $color-simdata-amber-dark1

  /* checkbox is checked */
  .check-container input:checked ~ .checkmark
    background-color: $color-simdata-amber-dark1

  .check-container:hover input:checked ~ .checkmark
    background-color: $color-simdata-amber-light1

  .check-container:active input:checked ~ .checkmark
    background-color: $color-simdata-amber-light2

  /* Create the checkmark/indicator (hidden when not checked) */
  .checkmark:after
    content: ""
    position: absolute
    display: none

  /* Show the checkmark when checked */
  .check-container input:checked ~ .checkmark:after
    display: block

  /* Style the checkmark/indicator */
  .check-container .checkmark:after
    left: 6px
    top: 2px
    width: 5px
    height: 10px
    border: solid white
    border-width: 0 3px 3px 0
    -webkit-transform: rotate(45deg)
    -ms-transform: rotate(45deg)
    transform: rotate(45deg)

  .organism
    .checkmark
      background-color: $color-simdata-carrot-light2

    /* On mouse-over, add a background color */
    .check-container:hover input ~ .checkmark
      background-color: $color-simdata-carrot-light1

    /* On mouse-down, add a background color */
    .check-container:active input ~ .checkmark
      background-color: $color-simdata-carrot-dark1

    /* checkbox is checked */
    .check-container input:checked ~ .checkmark
      background-color: $color-simdata-carrot-dark1

    .check-container:hover input:checked ~ .checkmark
      background-color: $color-simdata-carrot-light1

    .check-container:active input:checked ~ .checkmark
      background-color: $color-simdata-carrot-light2

    .check-container
      .label-holder .label
        color: #5C2300

    .check-container.checked
      .label-holder .label
        color: white


.left-abutment
  margin-left: $two-up-margin

  .header .title
    position: relative;
    left: -43px;

.right-abutment
  margin-right: $two-up-margin

.top-abutment
  margin-top: $two-up-margin

.bottom-abutment
  margin-bottom: $two-up-margin

.small-app
  .two-up-display
    .header
      font-size: $small-app-font-size-header

